--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,25 @@
-Source: template-repository
-Section: unknown
+Source: libcrypt-passwdmd5-perl
+Maintainer: Debian Perl Group <pkg-perl-maintainers@lists.alioth.debian.org>
+Uploaders: Nick Morrott <nickm@debian.org>
+Section: perl
+Testsuite: autopkgtest-pkg-perl
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Build-Depends: debhelper-compat (= 13),
+               libmodule-build-perl
+Build-Depends-Indep: perl
+Standards-Version: 4.6.1
+Rules-Requires-Root: no
+Vcs-Browser: https://salsa.debian.org/perl-team/modules/packages/libcrypt-passwdmd5-perl
+Vcs-Git: https://salsa.debian.org/perl-team/modules/packages/libcrypt-passwdmd5-perl.git
+Homepage: https://metacpan.org/release/Crypt-PasswdMD5
 
-Package: template-repository
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: libcrypt-passwdmd5-perl
+Architecture: all
+Depends: ${perl:Depends},
+         ${misc:Depends}
+Multi-Arch: foreign
+Description: interoperable MD5-based crypt() for Perl
+ Crypt::PasswdMD5 provides various crypt()-compatible interfaces to the
+ MD5-based crypt() function found in various *nixes.
+ .
+ It's based on the implementation found on FreeBSD 2.2.[56]-RELEASE.
